--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,57 +1,67 @@
-name: Build and Release
-
+name: build
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-
+  workflow_dispatch: {}
 jobs:
-  build-and-release:
-    runs-on: ubuntu-latest
+  build:
+    name: build
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        target: [aarch64-unknown-linux-musl, mips-unknown-linux-musl, x86_64-unknown-linux-musl]
-        qemu: [aarch64, mips, x86_64]
-        name: [aarch64-musl, mips-musl, x86_64-musl]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+        build: [linux, macos, windows]
+        include:
+          - build: linux
+            os: ubuntu-20.04
+            rust: nightly
+            target: x86_64-unknown-linux-musl
+            archive-name: catwrt-update-linux.tar.gz
+          - build: macos
+            os: macos-latest
+            rust: nightly
+            target: x86_64-apple-darwin
+            archive-name: catwrt-update-macos.tar.gz
+          - build: windows
+            os: windows-2019
+            rust: nightly-x86_64-msvc
+            target: x86_64-pc-windows-msvc
+            archive-name: catwrt-update-windows.7z
+      fail-fast: false
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: ${{ matrix.qemu }} 
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
+          toolchain: ${{ matrix.rust }}
           profile: minimal
-          toolchain: stable
+          override: true
+          target: ${{ matrix.target }}
 
-      - name: Install cross-compilation dependencies
+      - name: Build binary
+        run: cargo build --verbose --release --target ${{ matrix.target }}
+        env:
+          RUST_BACKTRACE: 1
+
+      - name: Strip binary (linux and macos)
+        if: matrix.build == 'linux' || matrix.build == 'macos'
+        run: strip "target/${{ matrix.target }}/release/catwrt-update"
+
+      - name: Build archive
+        shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential libssl-dev
-
-      - name: Build release binaries
-        run: |
-          RUSTFLAGS="-C target-feature=-crt-static" cargo build --release --target=$TARGET --features=ssl --all-features
-
-      - name: Create release artifacts
-        run: |
-          mkdir artifacts/$NAME
-          cp target/$TARGET/release/* artifacts/$NAME/
-          cd artifacts
-          zip -r release-$NAME.zip $NAME/
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+          mkdir archive
+          cp LICENSE README.md archive/
+          cd archive
+          if [ "${{ matrix.build }}" = "windows" ]; then
+            cp "../target/${{ matrix.target }}/release/catwrt-update.exe" ./
+            7z a "${{ matrix.archive-name }}" LICENSE README.md catwrt-update.exe
+          else
+            cp "../target/${{ matrix.target }}/release/catwrt-update" ./
+            tar -czf "${{ matrix.archive-name }}" LICENSE README.md catwrt-update
+          fi
+      - name: Upload archive
+        uses: actions/upload-artifact@v1
         with:
-          tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref }}
-          files: |
-            artifacts/*.zip
-          body: |
-            Release ${{ github.ref }}
+          name: ${{ matrix.archive-name }}
+          path: archive/${{ matrix.archive-name }}
