--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Install openssl-devel
-        if: matrix.build == 'linux'
+        if: matrix.build == 'linux-amd' || matrix.build == 'linux-arm'
         run: |
         sudo apt-get update
         sudo apt-get install -y openssl-devel
