--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,23 +8,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [linux-arm,linux-amd, macos, windows]
+        build: [linux, macos, windows]
         include:
-          - build: linux-amd
+          - build: linux
             os: ubuntu-20.04
             rust: nightly
             target: x86_64-unknown-linux-musl
-            archive-name: catwrt-update-linux-amd64.tar.gz
-          - build: linux-arm
-            os: ubuntu-20.04
-            rust: nightly
-            target: aarch64-unknown-linux-musl
-            archive-name: catwrt-update-linux-arm64.tar.gz
+            archive-name: catwrt-update-amd.tar.gz
           - build: macos
             os: macos-latest
             rust: nightly
-            target: x86_64-apple-darwin
-            archive-name: catwrt-update-macos.tar.gz
+            target: aarch64-unknown-linux-musl
+            archive-name: catwrt-update-arm.tar.gz
           - build: windows
             os: windows-2019
             rust: nightly-x86_64-msvc
@@ -44,33 +39,27 @@ jobs:
           override: true
           target: ${{ matrix.target }}
 
-      - name: Install openssl-devel
-        if: matrix.build == 'linux-amd' || matrix.build == 'linux-arm'
-        run: |
-        sudo apt-get update
-        sudo apt-get install -y openssl-devel
-
       - name: Build binary
         run: cargo build --verbose --release --target ${{ matrix.target }}
         env:
           RUST_BACKTRACE: 1
 
       - name: Strip binary (linux and macos)
-        if: matrix.build == 'linux-amd' || matrix.build == 'macos' || matrix.build == 'linux-arm'
+        if: matrix.build == 'linux' || matrix.build == 'macos'
         run: strip "target/${{ matrix.target }}/release/catwrt-update"
 
       - name: Build archive
         shell: bash
         run: |
           mkdir archive
-          cp archive/
+          cp LICENSE README.md archive/
           cd archive
           if [ "${{ matrix.build }}" = "windows" ]; then
             cp "../target/${{ matrix.target }}/release/catwrt-update.exe" ./
-            7z a "${{ matrix.archive-name }}" catwrt-update.exe
+            7z a "${{ matrix.archive-name }}" LICENSE README.md catwrt-update.exe
           else
             cp "../target/${{ matrix.target }}/release/catwrt-update" ./
-            tar -czf "${{ matrix.archive-name }}"  catwrt-update
+            tar -czf "${{ matrix.archive-name }}" LICENSE README.md catwrt-update
           fi
       - name: Upload archive
         uses: actions/upload-artifact@v1
