--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,18 +12,12 @@ jobs:
         include:
           - build: linux
             os: ubuntu-20.04
-            rust: nightly
-            target: x86_64-unknown-linux-musl
             archive-name: catwrt-update-amd.tar.gz
           - build: macos
             os: macos-latest
-            rust: nightly
-            target: aarch64-unknown-linux-musl
             archive-name: catwrt-update-arm.tar.gz
           - build: windows
             os: windows-2019
-            rust: nightly-x86_64-msvc
-            target: x86_64-pc-windows-msvc
             archive-name: catwrt-update-windows.7z
       fail-fast: false
 
@@ -32,21 +26,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: docker://clux/muslrust:stable
         with:
-          toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-          target: ${{ matrix.target }}
+          args: cargo install cargo-strip
 
       - name: Build binary
-        run: cargo build --verbose --release --target ${{ matrix.target }}
+        run: cargo build --verbose --release
         env:
           RUST_BACKTRACE: 1
 
       - name: Strip binary (linux and macos)
         if: matrix.build == 'linux' || matrix.build == 'macos'
-        run: strip "target/${{ matrix.target }}/release/catwrt-update"
+        run: cargo strip
 
       - name: Build archive
         shell: bash
@@ -55,10 +46,10 @@ jobs:
           cp LICENSE README.md archive/
           cd archive
           if [ "${{ matrix.build }}" = "windows" ]; then
-            cp "../target/${{ matrix.target }}/release/catwrt-update.exe" ./
+            cp "../target/release/catwrt-update.exe" ./
             7z a "${{ matrix.archive-name }}" LICENSE README.md catwrt-update.exe
           else
-            cp "../target/${{ matrix.target }}/release/catwrt-update" ./
+            cp "../target/release/catwrt-update" ./
             tar -czf "${{ matrix.archive-name }}" LICENSE README.md catwrt-update
           fi
       - name: Upload archive
